Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5141

Failing assertion: ib_table->stat_initialized in file ha_innodb.cc line 11042 on concurrent ALTER and SELECT from I_S

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.4
    • 10.0.6
    • None

    Description

      2013-10-15 18:49:21 7f0538bb5700  InnoDB: Assertion failure in thread 139660403365632 in file ha_innodb.cc line 11042
      InnoDB: Failing assertion: ib_table->stat_initialized

      #5  0x00007f056515bb8b in __GI_abort () at abort.c:91
      #6  0x0000000000a054ff in ha_innobase::info_low (this=0x7f0539db3020, flag=18, is_analyze=false) at /home/elenst/bzr/10.0/storage/innobase/handler/ha_innodb.cc:11042
      #7  0x0000000000a060d9 in ha_innobase::info (this=0x7f0539db3020, flag=18) at /home/elenst/bzr/10.0/storage/innobase/handler/ha_innodb.cc:11379
      #8  0x0000000000e8ba3b in ha_partition::info (this=0x7f0539cda820, flag=22) at /home/elenst/bzr/10.0/sql/ha_partition.cc:6413
      #9  0x00000000006c7b19 in get_schema_constraints_record (thd=0x7f054a39c008, tables=0x7f0539f09220, table=0x7f0539c19020, res=false, db_name=0x7f05370484e0, table_name=0x7f0539e091e0) at /home/elenst/bzr/10.0/sql/sql_show.cc:6255
      #10 0x00000000006beaf9 in fill_schema_table_by_open (thd=0x7f054a39c008, is_show_fields_or_keys=false, table=0x7f0539c19020, schema_table=0x16e2340, orig_db_name=0x7f05370484e0, orig_table_name=0x7f0539e091e0, open_tables_state_backup=0x7f0538bb29e0, can_deadlock=false) at /home/elenst/bzr/10.0/sql/sql_show.cc:4134
      #11 0x00000000006c016a in get_all_tables (thd=0x7f054a39c008, tables=0x7f0539c5d420, cond=0x0) at /home/elenst/bzr/10.0/sql/sql_show.cc:4775
      #12 0x00000000006ce33b in do_fill_table (thd=0x7f054a39c008, table_list=0x7f0539c5d420, join_table=0x7f0539cb4920) at /home/elenst/bzr/10.0/sql/sql_show.cc:7970
      #13 0x00000000006ce6b4 in get_schema_tables_result (join=0x7f0539c5ec20, executed_place=PROCESSED_BY_JOIN_EXEC) at /home/elenst/bzr/10.0/sql/sql_show.cc:8068
      #14 0x0000000000674a5f in JOIN::exec_inner (this=0x7f0539c5ec20) at /home/elenst/bzr/10.0/sql/sql_select.cc:2465
      #15 0x00000000006740b5 in JOIN::exec (this=0x7f0539c5ec20) at /home/elenst/bzr/10.0/sql/sql_select.cc:2307
      #16 0x00000000006776b4 in mysql_select (thd=0x7f054a39c008, rref_pointer_array=0x7f054a3a04b8, tables=0x7f0539c5d420, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2684619520, result=0x7f0539c5c260, unit=0x7f054a39fb00, select_lex=0x7f054a3a01f8) at /home/elenst/bzr/10.0/sql/sql_select.cc:3237
      #17 0x000000000066dd1e in handle_select (thd=0x7f054a39c008, lex=0x7f054a39fa40, result=0x7f0539c5c260, setup_tables_done_option=0) at /home/elenst/bzr/10.0/sql/sql_select.cc:371
      #18 0x0000000000641281 in execute_sqlcom_select (thd=0x7f054a39c008, all_tables=0x7f0539c5d420) at /home/elenst/bzr/10.0/sql/sql_parse.cc:5128
      #19 0x0000000000639653 in mysql_execute_command (thd=0x7f054a39c008) at /home/elenst/bzr/10.0/sql/sql_parse.cc:2519
      #20 0x0000000000643b06 in mysql_parse (thd=0x7f054a39c008, rawbuf=0x7f0539ed80e0 "SELECT * FROM INFORMATION_SCHEMA.`TABLE_CONSTRAINTS`", length=52, parser_state=0x7f0538bb44b0) at /home/elenst/bzr/10.0/sql/sql_parse.cc:6269
      #21 0x000000000063686e in dispatch_command (command=COM_QUERY, thd=0x7f054a39c008, packet=0x7f054a3a2009 "SELECT * FROM INFORMATION_SCHEMA.`TABLE_CONSTRAINTS`", packet_length=52) at /home/elenst/bzr/10.0/sql/sql_parse.cc:1278
      #22 0x0000000000635ca6 in do_command (thd=0x7f054a39c008) at /home/elenst/bzr/10.0/sql/sql_parse.cc:984
      #23 0x00000000007581bb in do_handle_one_connection (thd_arg=0x7f054a39c008) at /home/elenst/bzr/10.0/sql/sql_connect.cc:1379
      #24 0x0000000000757f0e in handle_one_connection (arg=0x7f054a39c008) at /home/elenst/bzr/10.0/sql/sql_connect.cc:1293
      #25 0x0000000000e645d1 in pfs_spawn_thread (arg=0x7f054a266f48) at /home/elenst/bzr/10.0/storage/perfschema/pfs.cc:1853
      #26 0x00007f0565cfae9a in start_thread (arg=0x7f0538bb5700) at pthread_create.c:308
      #27 0x00007f0565215cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      bzr version-info
      revision-id: sanja@askmonty.org-20131003150044-juwb8u4fbwkq1ol1
      revno: 3849
      branch-nick: 10.0

      RQG grammar (test.yy):

      query:
              ALTER TABLE my_table PARTITION BY KEY() PARTITIONS 8 | ALTER TABLE my_table REMOVE PARTITIONING ;
       
      thread1:
              SELECT * FROM INFORMATION_SCHEMA.`TABLE_CONSTRAINTS`;
       
      my_table:
              A | B ;

      RQG command line (full test with server startup):

       perl ./runall-new.pl --grammar=test.yy --threads=4 --duration=300 --queries=100M --basedir=<your 10.0 basedir> --vardir=<location for logs>

      RQG command line (assuming the server is already running on port 3306):

       perl ./gentest.pl --dsn=dbi:mysql:host=127.0.0.1:port=3306:user=root:database=test --grammar=test.yy --threads=4 --duration=300 --queries=100M --gendata
       

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.